--- a/classes.html
+++ b/classes.html
@@ -48,12 +48,12 @@
            
         <div class="full_bg_news">
             <h3 class="text-center">What we offer</h3>
-            <p class="text-justified text-center">All members of our society can attend <strong>free</strong> weekly classes (1h) taught by native-french speakers. You will find below a table sumarizing the different levels available.</p>
+            <p class="text-justified text-center">All members of our society can attend <strong>free</strong> weekly classes (1h) taught by native-french speakers. You will find below a table summarizing the different levels available.</p>
             <table cellpadding="15" align="center" class="table">
                 <tbody style="text-align: center;" class="tbody">
                     <tr>
                         <th>Level</th>
-                        <th>CEFR Level</th>
+                        <th>Equivalent CEFR Level</th>
                         <th>Timetable</th>
                         <th>Teachers</th>
                     </tr>
@@ -61,58 +61,58 @@
                         <th>Beginner 1</th>
                         <th>A1</th>
                         <th>Monday</th>
-                        <th>Anastasia Putilova/Ariane Krakovitch</th>
+                        <th>TBC</th>
                     </tr>
 					<tr>
                         <th>Beginner 2</th>
                         <th>A1</th>
                         <th>Thursday</th>
-                        <th>Marta Reguero/Nadia Bonnin</th>
+                        <th>TBC</th>
                     </tr>
                     <tr>
                         <th>Elementary 1</th>
                         <th>A2</th>
                         <th>Monday</th>
-                        <th>Iris Vialard/Maguelone Laval</th>
+                        <th>TBC</th>
                     </tr>
 					<tr>
                         <th>Elementary 2</th>
                         <th>A2</th>
                         <th>Thursday</th>
-                        <th>Soa Rabetsaroana/Nadia Abi</th>
+                        <th>TBC</th>
                     </tr>
                     <tr>
                         <th>Intermediate 1</th>
                         <th>B1</th>
                         <th>Monday</th>
-                        <th>Nicolas Koedjikov/Caroline Bouat</th>
+                        <th>TBC</th>
                     </tr>
 					<tr>
                         <th>Intermediate 2</th>
                         <th>B1</th>
                         <th>Thursday</th>
-                        <th>Leo-Paul Caron/Blanche Gonzales</th>
+                        <th>TBC</th>
                     </tr>
                     <tr>
                         <th>Advanced 1</th>
                         <th>B2/C1</th>
                         <th>Monday</th>
-                        <th>Maxence Tek/John Korngold</th>
+                        <th>TBC</th>
                     </tr>
 					<tr>
                         <th>Advanced 2</th>
                         <th>B2/C1</th>
                         <th>Thursday</th>
-                        <th>Alexandre Brunstein/Amelie Reymond</th>
+                        <th>TBC</th>
                     </tr>
                 </tbody>
             </table>
             
             <h3 class="text-center">Come along!</h3>
 			
-			<p class="text-center"> Once you have signed-up, we will be in touch with your assigned class. Please bear with us at the start of term as we get a lot of demand.</p>
+			<p class="text-center"> We will hold an information meeting early October in which we will present the content of classes and answer all of your questions. Late September, we will upload a survey for you to sign-up for our classes. </p>
 			
-            <p class="text-center"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSed9yFFDNLruWkbqhFGTjuP9vsv9Ndw1mvKG2hVjWfKJzB7_w/viewform?embedded=true" width="1200" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></p>
+           <!-- ADD WHEN NEW LINK <p class="text-center"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSed9yFFDNLruWkbqhFGTjuP9vsv9Ndw1mvKG2hVjWfKJzB7_w/viewform?embedded=true" width="1200" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></p> -->
 			
 			 <!-- Footer -->
       		<footer class="py-5 bg-black">
