--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 				<div class="row align-items-center overlay">
 					<div class="text-center white_txt">
 						<h1 class="Titles">Classes</h1>
-						<p>We organise <strong class="red_txt">free</strong> weekly classes taught by native speakers at four different levels* for students wanting to learn more about the French language and culture.</p>
+						<p>We organise <strong class="red_txt">free</strong> weekly classes taught by native speakers at four different levels for students wanting to learn more about the French language and culture.</p>
 						<button class="btn btn-outline-light" onclick="window.open('classes.html', '_blank')">Sign up for classes</button>
 					</div>
 				</div>
