--- a/events.html
+++ b/events.html
@@ -58,7 +58,7 @@
 
 		<div class="row">
 			<div class="column hvrbox">
-				<img class="hvrbox-layer_bottom" src="media/events/Brexit_conf.JPG" alt="brexit" style="width:100%; height: 100%;">
+				<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/Brexit_conf.JPG" alt="brexit" style="width:100%; height: 100%;">
 				<div class="hvrbox-layer_top">
 					<div class="hvrbox-text">"Eu and British citizens: What next?" by Massimo Ungaro (Italian MP in the UK) and Alessandro Spano at UCL with the Italian Society.</div>
 				</div>
