--- a/events.html
+++ b/events.html
@@ -64,7 +64,7 @@
 				</div>
 			</div>
 			<div class="column hvrbox">
-				<img class="hvrbox-layer_bottom" src="media/events/Foot_tournament.jpg" alt="foot" style="width:100%; height: 100%;">
+				<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/Foot_tournament.jpg" alt="foot" style="width:100%; height: 100%;">
 					<div class="hvrbox-layer_top">
 					<div class="hvrbox-text">French team in the first UCL International Football Tournament with 11 other cultural societies.</div>
 				</div>
@@ -73,13 +73,13 @@
 		
 		<div class="row">
 			<div class="column hvrbox">
-				<img class="hvrbox-layer_bottom" src="media/events/JFC-Conference-AI.jpg" alt="jfc" style="width:100%; height: 100%;">
+				<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/JFC-Conference-AI.jpg" alt="jfc" style="width:100%; height: 100%;">
 				<div class="hvrbox-layer_top">
 					<div class="hvrbox-text">"Will AI kill democracy" by Jean François Copé at King's College London.</div>
 				</div>
 			</div>
 			<div class="column hvrbox">
-				<img class="hvrbox-layer_bottom" src="media/events/HuisClosSartre.JPG" alt="huisclos" style="width:100%; height: 100%;">
+				<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/HuisClosSartre.JPG" alt="huisclos" style="width:100%; height: 100%;">
 				<div class="hvrbox-layer_top">
 					<div class="hvrbox-text">"Huis Clos" by Jean Paul Sartre. Directed by Sofia Bouguerra, Charlotte Gross and Jerome Sche.</div>
 				</div>
