--- a/events.html
+++ b/events.html
@@ -60,13 +60,13 @@
 			<div class="column hvrbox">
 				<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/Brexit_conf.JPG" alt="brexit" style="width:100%; height: 100%;">
 				<div class="hvrbox-layer_top">
-					<div class="hvrbox-text">"Eu and British citizens: What next?" by Massimo Ungaro (Italian MP in the UK) and Alessandro Spano at UCL with the Italian Society.</div>
+					<div class="hvrbox-text"> 28/1 - "EU and British citizens: What next?" by Massimo Ungaro (Italian MP in the UK) and Alessandro Spano at UCL with the Italian Society.</div>
 				</div>
 			</div>
 			<div class="column hvrbox">
 				<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/Foot_tournament.jpg" alt="foot" style="width:100%; height: 100%;">
 					<div class="hvrbox-layer_top">
-					<div class="hvrbox-text">French team in the first UCL International Football Tournament with 11 other cultural societies.</div>
+					<div class="hvrbox-text"> 28/10 - French team in the first UCL International Football Tournament with 11 other cultural societies.</div>
 				</div>
 			</div>
 		</div>
@@ -75,13 +75,13 @@
 			<div class="column hvrbox">
 				<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/JFC-Conference-AI.jpg" alt="jfc" style="width:100%; height: 100%;">
 				<div class="hvrbox-layer_top">
-					<div class="hvrbox-text">"Will AI kill democracy" by Jean François Copé at King's College London.</div>
+					<div class="hvrbox-text"> 5/2 -  "Will AI kill democracy" by Jean François Copé at King's College London.</div>
 				</div>
 			</div>
 			<div class="column hvrbox">
 				<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/HuisClosSartre.JPG" alt="huisclos" style="width:100%; height: 100%;">
 				<div class="hvrbox-layer_top">
-					<div class="hvrbox-text">"Huis Clos" by Jean Paul Sartre. Directed by Sofia Bouguerra, Charlotte Gross and Jerome Sche.</div>
+					<div class="hvrbox-text"> 7/03 - "Huis Clos" by Jean Paul Sartre. Directed by Sofia Bouguerra, Charlotte Gross and Jerome Sche.</div>
 				</div>
 			</div>
 		</div>
