--- a/events.html
+++ b/events.html
@@ -57,6 +57,21 @@
 		</div>
 
 		<div class="row">
+				<div class="column hvrbox">
+					<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/Cheese & Wine.jpg" style="width:100%; height: 100%;">
+					<div class="hvrbox-layer_top">
+						<div class="hvrbox-text"> Enjoy our monthly Cheese and Wine tasting session with imported French wine and cheese.</div>
+					</div>
+				</div>
+				<div class="column hvrbox">
+					<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/Film Screening.jpg"  style="width:100%; height: 100%;">
+						<div class="hvrbox-layer_top">
+						<div class="hvrbox-text"> Enjoy our monthly French Film screenings including award-winning movies such as Intouchables, La Haine and 120 Battements par minutes.</div>
+					</div>
+				</div>
+			</div>
+		
+		<div class="row">
 			<div class="column hvrbox">
 				<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/Brexit_conf.JPG" alt="brexit" style="width:100%; height: 100%;">
 				<div class="hvrbox-layer_top">
