--- a/events.html
+++ b/events.html
@@ -72,25 +72,72 @@
 			</div>
 		
 		<div class="row">
+				<div class="column hvrbox">
+					<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/Welcome Pique Nique.jpg" style="width:100%; height: 100%;">
+					<div class="hvrbox-layer_top">
+						<div class="hvrbox-text"> 21/09 - Welcome Pique Nique for new UCL Francophone students.</div>
+					</div>
+				</div>
+				<div class="column hvrbox">
+					<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/Synapson Oval Space.png"  style="width:100%; height: 100%;">
+						<div class="hvrbox-layer_top">
+						<div class="hvrbox-text"> 28/09 - In partnership with NOX London and London French Societies, our society proudly presents SYNAPSON and MICHAEL CALFAN at Egg London.</div>
+					</div>
+				</div>
+			</div>
+		
+		<div class="row">
+				<div class="column hvrbox">
+					<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/Foot_tournament.jpg" style="width:100%; height: 100%;">
+						<div class="hvrbox-layer_top">
+						<div class="hvrbox-text"> 28/10 - French team in the first UCL International Football Tournament with 11 other cultural societies.</div>
+					</div>
+				</div>
+				<div class="column hvrbox">
+					<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/Sartre.jpg"  style="width:100%; height: 100%;">
+						<div class="hvrbox-layer_top">
+						<div class="hvrbox-text"> 05/12 - Enchanté, Sartre! A conference on Jean-Paul Sartre, his thought, his life, his works, led by Professor Andrew Leak.</div>
+					</div>
+				</div>
+			</div>
+		
+		<div class="row">
+				<div class="column hvrbox">
+					<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/Karaoke.jpg" style="width:100%; height: 100%;">
+						<div class="hvrbox-layer_top">
+						<div class="hvrbox-text"> 06/12 - Come sing your lungs out for our French takeover of Mully’s for KARAOKE!.</div>
+					</div>
+				</div>
+				<div class="column hvrbox">
+					<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/Galette des Rois.jpg"  style="width:100%; height: 100%;">
+						<div class="hvrbox-layer_top">
+						<div class="hvrbox-text"> 10/01 - We welcome you back from Winter Holidaus with a wonderful French tradition: la galette des rois ("king's cake").</div>
+					</div>
+				</div>
+			</div>
+		
+		<div class="row">
 			<div class="column hvrbox">
 				<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/Brexit_conf.JPG" alt="brexit" style="width:100%; height: 100%;">
 				<div class="hvrbox-layer_top">
-					<div class="hvrbox-text"> 28/1 - "EU and British citizens: What next?" by Massimo Ungaro (Italian MP in the UK) and Alessandro Spano at UCL with the Italian Society.</div>
+					<div class="hvrbox-text"> 28/01 - "EU and British citizens: What next?" by Massimo Ungaro (Italian MP in the UK) and Alessandro Spano at UCL with the Italian Society.</div>
 				</div>
 			</div>
 			<div class="column hvrbox">
-				<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/Foot_tournament.jpg" alt="foot" style="width:100%; height: 100%;">
+				<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/JFC-Conference-AI.jpg" style="width:100%; height: 100%;">
 					<div class="hvrbox-layer_top">
-					<div class="hvrbox-text"> 28/10 - French team in the first UCL International Football Tournament with 11 other cultural societies.</div>
+					<div class="hvrbox-text"> 5/02 - "Will AI kill democracy" by Jean François Copé at King's College London.</div>
 				</div>
 			</div>
 		</div>
 		
+		
+		
 		<div class="row">
 			<div class="column hvrbox">
-				<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/JFC-Conference-AI.jpg" alt="jfc" style="width:100%; height: 100%;">
+				<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/Spanish Karaoke.jpg" style="width:100%; height: 100%;">
 				<div class="hvrbox-layer_top">
-					<div class="hvrbox-text"> 5/2 -  "Will AI kill democracy" by Jean François Copé at King's College London.</div>
+					<div class="hvrbox-text"> 26/02 - Prepare your lungs for this Karaoke night at Mully's collab between the Spanish and Francophone societies.</div>
 				</div>
 			</div>
 			<div class="column hvrbox">
@@ -101,6 +148,23 @@
 			</div>
 		</div>
 
+		<div class="row">
+			<div class="column hvrbox">
+				<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/HEC Discover.jpg" style="width:100%; height: 100%;">
+				<div class="hvrbox-layer_top">
+					<div class="hvrbox-text"> 08/03 - Discover HEC, an exclusive meeting with HEC Paris team, including Recruitment Manager Sophie Dimich-Louvet.</div>
+				</div>
+			</div>
+			<div class="column hvrbox">
+				<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/Easter Ball.jpg"  style="width:100%; height: 100%;">
+				<div class="hvrbox-layer_top">
+					<div class="hvrbox-text"> 11/03 - The UCL Francophone Society and the Spanish & Latin American Society are hosting their first ever Annual Easter Ball at Jerusalem Bar.</div>
+				</div>
+			</div>
+		</div>
+		
+		
+		
 		<!-- Footer -->
 		<footer class="py-5 bg-black">
 			<div class="container">
