--- a/events.html
+++ b/events.html
@@ -53,6 +53,11 @@
 		</nav>
 
 		<div class="container col-md-6 col-sm-6 col-xl-6">
+			<p class="greetings">Events 2019/2020</p>
+			<p> Coming Soon </p>
+		</div>
+		
+		<div class="container col-md-6 col-sm-6 col-xl-6">
 			<p class="greetings">Events 2018/2019</p>
 		</div>
 
