--- a/classes.html
+++ b/classes.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="shortcut icon" type="image/svg+xml" href="/media/logo_Franco.jpg"/>
+        <link rel="shortcut icon" type="image/svg+xml" href="/media/Logo Caro.png"/>
 
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-light sticky-top navbar-expand-md bg-light">
           <div class="container-fluid">
             <!-- Titre -->
-            <a class="navbar-brand" href="#"><img src="../media/logo_Franco.jpg" width="50px" height="50px" class="d-inline-block align-center">UCL Francophone Society</a>
+            <a class="navbar-brand" href="#"><img src="../media/Logo Caro.png" width="50px" height="50px" class="d-inline-block align-center">UCL Francophone Society</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarFrancosoc">
               <span class="navbar-toggler-icon"></span>
             </button>
