--- a/events.html
+++ b/events.html
@@ -46,7 +46,7 @@
 						<!--                  <a class="nav-link" href="/index.html#Sponsors">Sponsors</a>-->
 						<a class="nav-link" href="/index_1.2.html#Newsletter">Newsletter</a>
 						<a class="fa fa-facebook" href="http://www.facebook.com/uclfrancophonesociety" target="_blank" ></a>
-						<a class="fa fa-instagram" href="https://www.instagram.com/uclufrancosoc/" target="_blank"></a>
+						<a class="fa fa-instagram" href="https://www.instagram.com/uclfrancosoc/" target="_blank"></a>
 					</ul>
 				</div>
 			</div>
