--- a/committee.html
+++ b/committee.html
@@ -5,8 +5,8 @@
         <link rel="shortcut icon" type="image/svg+xml" href="/media/Logo Caro.png"/>
 
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="">
+        <meta name="description" content="UCL Francophone Society">
+        <meta name="author" content="UCL Francophone Society">
 
         <!-- Bootstrap CSS  -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
@@ -138,7 +138,7 @@
 		 <!-- Footer -->
       		<footer class="py-5 bg-black">
 				<div class="container">
-          			<p class="m-0 text-center text-small">Copyright &copy; UCL Francophone Society 2018</p>
+          			<p class="m-0 text-center text-small">Copyright &copy; UCL Francophone Society 2020</p>
         		</div>
 			</footer>
     </body>
