--- a/events.html
+++ b/events.html
@@ -113,7 +113,7 @@
 				<div class="column hvrbox">
 					<img class="hvrbox-layer_bottom" src="media/Photos event 2018-2019/Galette des Rois.jpg"  style="width:100%; height: 100%;">
 						<div class="hvrbox-layer_top">
-						<div class="hvrbox-text"> 10/01 - We welcome you back from Winter Holidaus with a wonderful French tradition: la galette des rois ("king's cake").</div>
+						<div class="hvrbox-text"> 10/01 - We welcome you back from Winter Holidays with a wonderful French tradition: la galette des rois ("king's cake").</div>
 					</div>
 				</div>
 			</div>
