--- a/classes.html
+++ b/classes.html
@@ -5,8 +5,8 @@
         <link rel="shortcut icon" type="image/svg+xml" href="/media/Logo Caro.png"/>
 
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="">
+        <meta name="description" content="UCL Francophone Society">
+        <meta name="author" content="UCL Francophone Society">
         
         <title> Language Classes</title>
         
@@ -117,7 +117,7 @@
 			 <!-- Footer -->
       		<footer class="py-5 bg-black">
 				<div class="container">
-          			<p class="m-0 text-center text-small">Copyright &copy; UCL Francophone Society 2018</p>
+          			<p class="m-0 text-center text-small">Copyright &copy; UCL Francophone Society 2020</p>
         		</div>
 			</footer>
         </div>
