--- a/committee.html
+++ b/committee.html
@@ -57,7 +57,7 @@
 				<div class="col-md-6 col-sm-6 col-xl-6">
 					<div class="our-team">
 						<div class="pic">
-							<img src="media/committee/maxence.jpg" alt="">
+							<img src="media/committee/Maxence.jpg" alt="">
 						</div>
 						<div class="team-content">
 							<h3 class="title">Maxence Tek</h3>
@@ -69,7 +69,7 @@
 				<div class="col-md-6 col-sm-6 col-xl-6">
 					<div class="our-team">
 						<div class="pic">
-							<img src="media/committee/caroline.jpg" alt="">
+							<img src="media/committee/Caroline.JPG" alt="">
 						</div>
 						<div class="team-content">
 							<h3 class="title">Caroline Bouat</h3>
@@ -85,7 +85,7 @@
 				<div class="col-md-6 col-sm-6 col-xl-6">
 					<div class="our-team">
 						<div class="pic">
-							<img src="media/committee/amaury.jpg" alt="">
+							<img src="media/committee/Amaury.jpg" alt="">
 						</div>
 						<div class="team-content">
 							<h3 class="title">Amaury Genovese</h3>
@@ -96,7 +96,7 @@
 				<div class="col-md-6 col-sm-6 col-xl-6">
 					<div class="our-team">
 						<div class="pic">
-							<img src="media/committee/camille.jpg" alt="">
+							<img src="media/committee/Camille.jpg" alt="">
 						</div>
 						<div class="team-content">
 							<h3 class="title">Camille Chandran</h3>
@@ -107,7 +107,7 @@
 				<div class="col-md-6 col-sm-6 col-xl-6">
 						<div class="our-team">
 							<div class="pic">
-								<img src="media/committee/john.jpg" alt="">
+								<img src="media/committee/John.jpg" alt="">
 							</div>
 							<div class="team-content">
 								<h3 class="title">John Korngold</h3>
@@ -118,7 +118,7 @@
 				<div class="col-md-6 col-sm-6 col-xl-6">
 						<div class="our-team">
 							<div class="pic">
-								<img src="media/committee/charlotte.jpg" alt="">
+								<img src="media/committee/Charlotte.jpg" alt="">
 <!--								<p href="#" class="read-more">read more</p>-->
 							</div>
 							<div class="team-content">
@@ -130,7 +130,7 @@
 				<div class="col-md-6 col-sm-6 col-xl-6">
 						<div class="our-team">
 							<div class="pic">
-								<img src="media/committee/clémence.jpg" alt="">
+								<img src="media/committee/Clémence.jpg" alt="">
 							</div>
 							<div class="team-content">
 								<h3 class="title">Clémence Lafougère</h3>
