--- a/committee.html
+++ b/committee.html
@@ -69,7 +69,7 @@
 				<div class="col-md-6 col-sm-6 col-xl-6">
 					<div class="our-team">
 						<div class="pic">
-							<img src="media/committee/.JPG" alt="">
+							<img src="media/committee/Caroline.JPG" alt="">
 						</div>
 						<div class="team-content"> 
 							<h3 class="title">Caroline Bouat</h3>
@@ -96,7 +96,7 @@
 				<div class="col-md-6 col-sm-6 col-xl-6">
 					<div class="our-team">
 						<div class="pic">
-							<img src="media/committee/.jpg" alt="">
+							<img src="media/committee/Camille.jpg" alt="">
 						</div>
 						<div class="team-content">
 							<h3 class="title">Camille Chandran</h3>
