--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="keywords" content="UCL, Francophone Society, Society, ucl francophone society, ">
 
 
-		<link rel="shortcut icon" type="image/svg+xml" href="../media/Logo Caro.png"/>
+		<link rel="shortcut icon" type="image/svg+xml" href="../media/Logo Amaury.png"/>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="UCL Francophone Society">
@@ -40,7 +40,7 @@
 		<nav class="navbar navbar-right navbar-light sticky-top navbar-expand-md bg-light">
 			<div class="container-fluid">
 				<!-- Titre -->
-				<a class="navbar-brand" href="#"><img src="../media/Logo Caro.png" width="50px" height="50px" class="d-inline-block align-center">UCL Francophone Society</a>
+				<a class="navbar-brand" href="#"><img src="../media/Logo Amaury.png" width="50px" height="50px" class="d-inline-block align-center">UCL Francophone Society</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarFrancosoc">
 					<span class="navbar-toggler-icon"></span>
 				</button>
