--- a/committee.html
+++ b/committee.html
@@ -57,7 +57,7 @@
 				<div class="col-md-6 col-sm-6 col-xl-6">
 					<div class="our-team">
 						<div class="pic">
-							<img src="media/committee/" alt="">
+							<img src="media/committee/Maxence.jpg" alt="">
 						</div>
 						<div class="team-content">
 							<h3 class="title">Maxence Tek</h3>
