--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				<div class="row align-items-center overlay">
 					<div class="text-center white_txt">
 						<h1 class="Titles">A few words about us</h1>
-						<p>Twelve years ago, the UCL Francophone Society was created to celebrate and promote the cultural and historical richness of Francophone countries. Today, we have grown to be one of the largest cultural societies on campus, with over 300 members. We are proud to be a group that shares our founders’ original vision: being a member of the Francophone Society is a chance to be a part of a diverse, supporting and fun community, as well as to share your passion for the French speaking world!</p>
+						<p>At the UCL Francophone Society we are dedicated to encouraging students to discover the francophone culture, as well as offering French and non-French speakers a platform to meet each other. Since 2006, we strive to create a diverse community that every UCL student can be a part of, and where newcomers can integrate themselves in the student life! We organize social and cultural events on a regular basis throughout the year, and inform our members through newsletters, Facebook (@uclfrancophonesociety), and Instagram (@uclfrancosoc)! Truly inclusive, we are open to everyone eager to enjoy francophone-themed social and cultural events, and take pride in the diversity of our members!</p>
 						<button class="btn btn-outline-light" onclick="window.open('http://studentsunionucl.org/clubs-societies/francophone-society', '_blank')">Get your membership</button>
 					</div>
 				</div>
@@ -134,7 +134,7 @@
 				<div class="row align-items-center overlay">
 					<div class="text-center white_txt">
 						<h1 class="Titles">Classes</h1>
-						<p>We organise <strong class="red_txt">free</strong> weekly classes taught by native speakers at four different levels for students wanting to learn more about the French language and culture.</p>
+						<p>We also offer French language classes for any student from beginner level to advanced! Instead of strict educational learning methods, we believe that socializing with francophone people is the best way to progress in French. More than just teachers, the educational team is composed of students who want to share their knowledge in the French language and in the francophone culture in a very friendly approach.</p>
 						<button class="btn btn-outline-light" onclick="window.open('classes.html', '_blank')">Sign up for classes</button>
 					</div>
 				</div>
