--- a/classes.html
+++ b/classes.html
@@ -49,6 +49,13 @@
         <div class="full_bg_news">
             <h3 class="text-center">What we offer</h3>
             <p class="text-justified text-center">All members of our society can attend <strong>free</strong> weekly classes (1h) taught by native-french speakers. You will find below a table summarizing the different levels available.</p>
+		<p class="text-justified text-center"> We offer 4 different levels:
+			Beginners: for people who have never studied French, or very little
+			Elementary: for people with a strong A1 or A2 level. For you if you can: understand sentences without context, communicate basic ideas, conjugate a few verbs in the present
+			Intermediate: for people with a B1 or decent B2 level. For you if you can: read and understand short texts, have decent conversations with people, conjugate verbs in the future and in the past, and write texts without too many mistakes
+			Advanced: for people with a B2 or higher. For you if you can: read a book in French, have a conversation with someone on any given topic, use all verb tenses, write with little mistakes, and vary the structures you use
+
+			Keep in mind you can change levels whenever you feel like it!</p>
             <table cellpadding="15" align="center" class="table">
                 <tbody style="text-align: center;" class="tbody">
                     <tr>
@@ -110,9 +117,9 @@
             
             <h3 class="text-center">Come along!</h3>
 			
-			<p class="text-center"> We will hold an information meeting early October in which we will present the content of classes and answer all of your questions. Late September, we will upload a survey for you to sign-up for our classes. </p>
+
 			
-           <!-- ADD WHEN NEW LINK <p class="text-center"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSed9yFFDNLruWkbqhFGTjuP9vsv9Ndw1mvKG2hVjWfKJzB7_w/viewform?embedded=true" width="1200" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></p> -->
+            <p class="text-center"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfQrPQux66PnbBV0e8-3cGTkczXmTnhQMg3EKeaLsMS8x60fg/viewform" width="1200" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></p> 
 			
 			 <!-- Footer -->
       		<footer class="py-5 bg-black">
