--- a/classes.html
+++ b/classes.html
@@ -49,11 +49,11 @@
         <div class="full_bg_news">
             <h3 class="text-center">What we offer</h3>
             <p class="text-justified text-center">All members of our society can attend <strong>free</strong> weekly classes (1h) taught by native-french speakers. You will find below a table summarizing the different levels available.</p>
-		<p class="text-justified text-center"> We offer 4 different levels:
-			Beginners: for people who have never studied French, or very little
-			Elementary: for people with a strong A1 or A2 level. For you if you can: understand sentences without context, communicate basic ideas, conjugate a few verbs in the present
-			Intermediate: for people with a B1 or decent B2 level. For you if you can: read and understand short texts, have decent conversations with people, conjugate verbs in the future and in the past, and write texts without too many mistakes
-			Advanced: for people with a B2 or higher. For you if you can: read a book in French, have a conversation with someone on any given topic, use all verb tenses, write with little mistakes, and vary the structures you use
+		<p class="text-justified text-center"> We offer 4 different levels: </p>
+		<p class="text-justified text-center"> Beginners: for people who have never studied French, or very little. </p>
+		<p class="text-justified text-center"> Elementary: for people with a strong A1 or A2 level. For you if you can: understand sentences without context, communicate basic ideas, conjugate a few verbs in the present. </p>
+		<p class="text-justified text-center"> Intermediate: for people with a B1 or decent B2 level. For you if you can: read and understand short texts, have decent conversations with people, conjugate verbs in the future and in the past, and write texts without too many mistakes. </p>
+		<p class="text-justified text-center"> Advanced: for people with a B2 or higher. For you if you can: read a book in French, have a conversation with someone on any given topic, use all verb tenses, write with little mistakes, and vary the structures you use. </p>
 
 			Keep in mind you can change levels whenever you feel like it!</p>
             <table cellpadding="15" align="center" class="table">
@@ -66,49 +66,49 @@
                     </tr>
                     <tr>
                         <th>Beginner 1</th>
-                        <th>A1</th>
+                        <th>New or weak A1</th>
                         <th>Monday</th>
                         <th>TBC</th>
                     </tr>
 					<tr>
                         <th>Beginner 2</th>
-                        <th>A1</th>
+                        <th>New or weak A1</th>
                         <th>Thursday</th>
                         <th>TBC</th>
                     </tr>
                     <tr>
                         <th>Elementary 1</th>
-                        <th>A2</th>
+                        <th>Strong A1 or A2</th>
                         <th>Monday</th>
                         <th>TBC</th>
                     </tr>
 					<tr>
                         <th>Elementary 2</th>
-                        <th>A2</th>
+                        <th>Strong A1 or A2</th>
                         <th>Thursday</th>
                         <th>TBC</th>
                     </tr>
                     <tr>
                         <th>Intermediate 1</th>
-                        <th>B1</th>
+                        <th>B1 or weak B2</th>
                         <th>Monday</th>
                         <th>TBC</th>
                     </tr>
 					<tr>
                         <th>Intermediate 2</th>
-                        <th>B1</th>
+                        <th>B1 or weak B2</th>
                         <th>Thursday</th>
                         <th>TBC</th>
                     </tr>
                     <tr>
                         <th>Advanced 1</th>
-                        <th>B2/C1</th>
+                        <th>B2 or higher</th>
                         <th>Monday</th>
                         <th>TBC</th>
                     </tr>
 					<tr>
                         <th>Advanced 2</th>
-                        <th>B2/C1</th>
+                        <th>B2 or higher</th>
                         <th>Thursday</th>
                         <th>TBC</th>
                     </tr>
